--- a/index.html
+++ b/index.html
@@ -2,108 +2,155 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Juego del Impostor</title>
 
   <style>
+    :root {
+      --bg: #0f172a;
+      --card: #020617;
+      --primary: #2563eb;
+      --secondary: #16a34a;
+      --text: #e5e7eb;
+      --muted: #94a3b8;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
       margin: 0;
+      padding: env(safe-area-inset-top) env(safe-area-inset-right)
+               env(safe-area-inset-bottom) env(safe-area-inset-left);
+      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .app {
+      width: 100%;
+      max-width: 420px;
       padding: 20px;
-      text-align: center;
+      background: var(--card);
+      border-radius: 16px;
     }
 
     h2 {
+      margin-top: 0;
       margin-bottom: 16px;
+      font-size: 1.4rem;
     }
 
     input {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 6px;
+      width: 100%;
+      padding: 14px;
+      font-size: 1rem;
+      border-radius: 10px;
       border: none;
-      outline: none;
+      margin-bottom: 10px;
     }
 
     button {
-      padding: 10px 16px;
-      margin: 6px;
-      font-size: 16px;
-      border-radius: 8px;
+      width: 100%;
+      padding: 14px;
+      font-size: 1rem;
+      border-radius: 12px;
       border: none;
       cursor: pointer;
-      background: #2563eb;
+      background: var(--primary);
       color: white;
+      margin-bottom: 10px;
+      touch-action: manipulation;
+    }
+
+    button.secondary {
+      background: var(--secondary);
     }
 
     button:disabled {
-      background: #475569;
+      background: #334155;
       cursor: not-allowed;
     }
 
     ul {
       list-style: none;
       padding: 0;
+      margin: 10px 0;
     }
 
     li {
-      margin: 4px 0;
-    }
-
-    #game {
-      max-width: 400px;
-      margin: auto;
+      padding: 6px 0;
+      color: var(--muted);
     }
 
     #buttons button {
-      width: 100%;
-      margin-bottom: 8px;
+      font-size: 1.1rem;
     }
 
     #result {
-      font-size: 22px;
+      font-size: 1.4rem;
       margin: 16px 0 8px;
-      min-height: 28px;
+      min-height: 36px;
     }
 
     #countdown {
-      font-size: 18px;
-      color: #93c5fd;
+      font-size: 1rem;
+      color: var(--muted);
       min-height: 24px;
     }
 
-    .secondary {
-      background: #16a34a;
+    /* Tablet + desktop */
+    @media (min-width: 768px) {
+      .app {
+        max-width: 500px;
+        padding: 32px;
+      }
+
+      h2 {
+        font-size: 1.6rem;
+      }
+
+      button {
+        font-size: 1.1rem;
+      }
     }
   </style>
 </head>
 
 <body>
 
-  <h1>El impostor</h1>
-  <!-- PANTALLA 1 -->
-  <div id="setup">
-    <h2>Jugadores</h2>
+  <div class="app">
 
-    <input id="playerInput" placeholder="Nombre del jugador" />
-    <button onclick="addPlayer()">Agregar</button>
+    <h1>El impostor</h1>
+    <!-- SETUP -->
+    <div id="setup">
+      <h2>Jugadores</h2>
 
-    <ul id="playerList"></ul>
+      <input id="playerInput" placeholder="Nombre del jugador" />
+      <button onclick="addPlayer()">Agregar</button>
 
-    <button class="secondary" onclick="startGame()">Empezar juego</button>
-  </div>
+      <ul id="playerList"></ul>
 
-  <!-- PANTALLA 2 -->
-  <div id="game" style="display:none;">
-    <h2>Tocá tu nombre</h2>
+      <button class="secondary" onclick="startGame()">Empezar juego</button>
+    </div>
 
-    <div id="buttons"></div>
+    <!-- JUEGO -->
+    <div id="game" style="display:none;">
+      <h2>Tocá tu nombre</h2>
 
-    <p id="result"></p>
-    <p id="countdown"></p>
+      <div id="buttons"></div>
 
-    <button class="secondary" onclick="resetGame()">Nueva partida</button>
+      <p id="result"></p>
+      <p id="countdown"></p>
+
+      <button class="secondary" onclick="resetGame()">Nueva partida</button>
+    </div>
+
   </div>
 
 <script>
@@ -119,7 +166,6 @@
   function addPlayer() {
     const input = document.getElementById("playerInput");
     const name = input.value.trim();
-
     if (!name) return;
 
     players.push(name);
@@ -130,7 +176,6 @@
   function renderPlayerList() {
     const ul = document.getElementById("playerList");
     ul.innerHTML = "";
-
     players.forEach(player => {
       const li = document.createElement("li");
       li.textContent = player;
@@ -170,9 +215,7 @@
     players.forEach((player, index) => {
       const btn = document.createElement("button");
       btn.textContent = player;
-
       btn.onclick = () => revealRole(index, btn);
-
       container.appendChild(btn);
     });
   }
@@ -183,11 +226,10 @@
     const result = document.getElementById("result");
     const countdownEl = document.getElementById("countdown");
 
-    if (index === impostorIndex) {
-      result.textContent = "😈 IMPOSTOR 😈";
-    } else {
-      result.textContent = "Palabra: " + secretWord.toUpperCase();
-    }
+    result.textContent =
+      index === impostorIndex
+        ? "😈 Sos el IMPOSTOR"
+        : "🍎 Palabra: " + secretWord;
 
     button.disabled = true;
 
