--- a/index.html
+++ b/index.html
@@ -156,127 +156,146 @@
   // ===== ESTADO =====
   const players = [];
 const words = [
+  // ===== OBJETOS / CONCEPTOS =====
   "Manzana",
   "Banana",
-  "Naranja",
-  "Frutilla",
-  "Sandía",
-  "Uva",
-  "Pera",
-  "Limón",
-  "Durazno",
-  "Ananá",
-
   "Auto",
-  "Camión",
-  "Moto",
   "Bicicleta",
   "Avión",
   "Barco",
-  "Tren",
-  "Subte",
-  "Colectivo",
-  "Helicóptero",
-
   "Perro",
   "Gato",
-  "Caballo",
-  "Vaca",
-  "Oveja",
-  "Cerdo",
-  "Conejo",
-  "León",
-  "Tigre",
-  "Elefante",
-
   "Playa",
   "Montaña",
-  "Bosque",
-  "Desierto",
   "Río",
-  "Lago",
-  "Isla",
-  "Cascada",
-  "Volcán",
-  "Selva",
-
   "Mesa",
   "Silla",
   "Cama",
   "Sofá",
-  "Armario",
   "Puerta",
   "Ventana",
   "Espejo",
-  "Lámpara",
-  "Alfombra",
-
   "Teléfono",
   "Computadora",
   "Teclado",
-  "Mouse",
   "Pantalla",
-  "Auriculares",
-  "Cámara",
-  "Televisor",
-  "Reloj",
-  "Radio",
-
   "Pizza",
   "Hamburguesa",
   "Empanada",
   "Milanesa",
   "Asado",
   "Pasta",
-  "Sopa",
-  "Ensalada",
-  "Sandwich",
-  "Torta",
-
   "Pelota",
-  "Raqueta",
-  "Tablero",
-  "Dado",
   "Carta",
-  "Rompecabezas",
-  "Videojuego",
-  "Muñeco",
-  "Bloques",
-  "Trompo",
-
+  "Dado",
   "Escuela",
   "Hospital",
-  "Banco",
-  "Supermercado",
-  "Restaurante",
   "Cine",
-  "Teatro",
   "Museo",
-  "Biblioteca",
-  "Estadio",
-
   "Sombrero",
   "Zapato",
   "Campera",
-  "Remera",
-  "Pantalón",
-  "Bufanda",
-  "Guantes",
-  "Vestido",
-  "Cinturón",
   "Mochila",
-
   "Sol",
   "Luna",
-  "Estrella",
-  "Nube",
   "Lluvia",
-  "Viento",
-  "Nieve",
-  "Tormenta",
-  "Arcoíris",
-  "Trueno"
+
+  // ===== PELÍCULAS =====
+  "Titanic",
+  "Matrix",
+  "Avatar",
+  "Gladiador",
+  "Rocky",
+  "Forrest Gump",
+  "El Padrino",
+  "Star Wars",
+  "Jurassic Park",
+  "Volver al Futuro",
+  "Harry Potter",
+  "El Señor de los Anillos",
+  "Inception",
+  "Toy Story",
+  "Buscando a Nemo",
+  "Shrek",
+  "Piratas del Caribe",
+  "Batman",
+  "Spiderman",
+  "Joker",
+  "El Rey León",
+  "Frozen",
+  "Interestelar",
+  "Terminator",
+  "Indiana Jones",
+
+  // ===== FÚTBOL =====
+  "Fútbol",
+  "Pelota de fútbol",
+  "Arco",
+  "Cancha",
+  "Gol",
+  "Penal",
+  "Offside",
+  "Hincha",
+  "Árbitro",
+  "VAR",
+  "Copa del Mundo",
+  "Champions League",
+  "Libertadores",
+  "Bombonera",
+  "Monumental",
+  "River Plate",
+  "Boca Juniors",
+  "Barcelona",
+  "Real Madrid",
+  "Manchester United",
+  "Messi",
+  "Maradona",
+  "Di María",
+  "Scaloni",
+  "Dibu Martínez",
+
+  // ===== ARGENTINA 🇦🇷 =====
+  "Argentina",
+  "Buenos Aires",
+  "Córdoba",
+  "Rosario",
+  "Mendoza",
+  "Mar del Plata",
+  "Bariloche",
+  "Patagonia",
+  "Obelisco",
+  "Casa Rosada",
+  "Caminito",
+  "Mate",
+  "Termo",
+  "Bombilla",
+  "Dulce de leche",
+  "Alfajor",
+  "Facturas",
+  "Choripán",
+  "Fernet",
+  "Empanadas salteñas",
+  "Asado argentino",
+  "Milonga",
+  "Tango",
+  "Folklore",
+  "Chacarera",
+  "Gaucho",
+  "Poncho",
+  "Yerba mate",
+  "Quilmes",
+  "Maradona",
+  "Messi",
+  "Ricardo Darín",
+  "Guillermo Francella",
+  "Charly García",
+  "Fito Páez",
+  "Soda Stereo",
+  "Los Redondos",
+  "La Mona Jiménez",
+  "Mirtha Legrand"
 ];
+
 
 
   let impostorIndex = null;
